--- a/k8s/31-user.yaml
+++ b/k8s/31-user.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: user
-          image: ghcr.io/example/blablacar-user:latest
+          image: blablacar-user:latest
           ports:
             - containerPort: 8081
           envFrom:
