--- a/k8s/40-ingress.yaml
+++ b/k8s/40-ingress.yaml
@@ -10,7 +10,7 @@ spec:
     - host: blablacar.local
       http:
         paths:
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
