--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>ua.org.blablacar</groupId>
     <artifactId>UserService</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
     <name>UserService as a part of BlaBlaCar app</name>
     <description>UserService</description>
@@ -28,7 +28,7 @@
         <skip.repackage>true</skip.repackage>
         <java.version>21</java.version>
         <mapstruct.version>1.6.3</mapstruct.version>
-        <springdoc-openapi.version>2.8.6</springdoc-openapi.version>
+        <springdoc-openapi.version>2.8.9</springdoc-openapi.version>
     </properties>
 
     <dependencies>
