--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ua.org.blablacar</groupId>
         <artifactId>UserService</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>repository</artifactId>
