--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=UserService
 
-spring.datasource.url=${POSTGRES_URL}
+spring.datasource.url=${USER_DB_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8080
+server.port=8081
