--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,8 +5,12 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.mapper.accept-case-insensitive-properties=true
+
+spring.data.web.pageable.one-indexed-parameters=true
 
 server.port=8081
